# transformer

./: .gitattributes  .gitignore  README.md  data.ipynb  generate.ipynb  pyproject.toml  run.py  training.ipynb
data/: __init__.py
data/main/: data.py
deprecated/: data.ipynb  generate.ipynb  training.ipynb
gpt/: __init__.py
gpt/main/: gpt.py  multiheadattn.py  selfattn.py  vanilla.py
gpt/model/: block.py  gpt.py  multiheadattn.py  selfattn.py  vanilla.py
gpt/train/: loss.py  training.py
